apps/manifests/headlamp/headlamp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    app: headlamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headlamp
  template:
    metadata:
      labels:
        app: headlamp
    spec:
      serviceAccountName: headlamp
      containers:
      - name: headlamp
        image: ghcr.io/headlamp-k8s/headlamp:v0.35.0
        imagePullPolicy: IfNotPresent
        args:
        - -in-cluster
        - -plugins-dir=/headlamp/plugins
        ports:
        - containerPort: 4466
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 4466
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 4466
          initialDelaySeconds: 5
          periodSeconds: 5
        resources: {}
        securityContext:
          privileged: false
          runAsUser: 100
          runAsGroup: 101
          runAsNonRoot: true
        volumeMounts:
        - name: config
          mountPath: /headlamp/config
      volumes:
      - name: config
        configMap:
          name: headlamp-config
