apps/manifests/headlamp/headlamp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    app: headlamp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4466
    protocol: TCP
    name: http
  selector:
    app: headlamp
